--- a/_posts/2021-09-20-click.md
+++ b/_posts/2021-09-20-click.md
@@ -5,28 +5,28 @@ date: '2021-10-20'
 tags: []
 ---
 She finally had some time alone and then... the zone,<br>
-The tunnel, the long simmer had been passed through.<br>
+the tunnel, the long simmer had been passed through.<br>
 She went to return the things that had been left with her. <br>
 Warm hands from the television reached out,<br>
-Caressed, and everyone knew the joke. <br>
+caressed, and everyone knew the joke. <br>
 Forbidden plastic filled up the ice chest. <br>
 Cygnets in the bay comingled with roses.<br>
 Wild headlights. As if nothing had taken<br>
-Place, or hold, even the scars she'd sworn<br>
-She'd recognize in any lineup, gone.<br>
+place, or hold, even the scars she'd sworn<br>
+she'd recognize in any lineup, gone.<br>
 It was not freeing; it was the hallway<br>
-Between schoolrooms, the almost-autumn<br>
-Sense of not belonging to a world so<br>
-Regular it could be regularly paused.<br>
+between schoolrooms, the almost-autumn<br>
+sense of not belonging to a world so<br>
+regular it could be regularly paused.<br>
 In the moments between crises A and B<br>
-She took the book, the scarf, the clear container<br>
-Home to their owners, some of whom,<br>
-In the interim, had grown immeasurably old.<br>
+she took the book, the scarf, the clear container<br>
+home to their owners, some of whom,<br>
+in the interim, had grown immeasurably old.<br>
 Who spoke sadly, who mourned<br>
 The loss of childhoods not their own.<br>
 Suddenly everyone had a plot of land.<br>
 In one, one had hung death's blue light<br>
-And claimed to have seen a garden snake.<br>
+and claimed to have seen a garden snake.<br>
 She believed it; she believed in the reappearance<br>
-Of all thought-defeated things, even here, between<br>
-The underpass and the windshield repair store.
+of all thought-defeated things, even here, between<br>
+the underpass and the windshield repair store.
