--- a/_posts/2021-09-20-click.md
+++ b/_posts/2021-09-20-click.md
@@ -1,8 +1,8 @@
 ---
 layout: post
 title: "“Click”"
-date: '2021-10-20'
-tags: []
+date: '2021-10-07'
+tags: [mypoems]
 ---
 She finally had some time alone and then... the zone,<br>
 the tunnel, the long simmer had been passed through.<br>
