--- a/_posts/2021-09-25-klossner.md
+++ b/_posts/2021-09-25-klossner.md
@@ -2,7 +2,7 @@
 layout: post
 title: "Writing the Wound: The Production of the Real in S.M.H.’s <em>CICATRIZATION</em>"
 date: '2021-09-27'
-tags: []
+tags: [violence, bookreviews]
 ---
 
 I'm proud to have worked on <a href="https://thequarterlessreview.com/leonard-klossner">this piece</a> with writer Leonard Klossner and editor David Kuhnlein for <em>The Quarterless Review</em>. It's not easy to convince folks to run a book review of a book with this much graphic violence. 
