--- a/_posts/2021-10-20-seeking.md
+++ b/_posts/2021-10-20-seeking.md
@@ -11,3 +11,5 @@ I'm looking for submissions for a couple things.
 2. Poems that use any word or phrase from <a href="https://serenasol.in/2021/08/from-will-alexanders-across-the-vapour-gulf">this poem</a> by Will Alexander. 
 
 If you have writing like this and want to see it out in the world, shoot me an email at ss3789990@gmail.com. I promise I'll take good care of it. 
+
+#thankyou
