--- a/_posts/2021-09-20-click.md
+++ b/_posts/2021-09-20-click.md
@@ -4,6 +4,9 @@ title: "“Click”"
 date: '2021-10-07'
 tags: [mypoems]
 ---
+
+![click](/assets/click.png)
+
 She finally had some time alone and then... the zone,<br>
 the tunnel, the long simmer had been passed through.<br>
 She went to return the things that had been left with her. <br>
