--- a/_posts/2021-09-29-bball.md
+++ b/_posts/2021-09-29-bball.md
@@ -5,4 +5,6 @@ date: '2021-09-29'
 tags: [images, floodlights]
 ---
 
+![click](/assets/love.jfif)
+
 <a href="https://duckduckgo.com/?q=outdoor+basketball+court+lights&atb=v1-1&iax=images&ia=images&iai=http%3A%2F%2Fwww.mecreeled.com%2Fwp-content%2Fuploads%2F2018%2F07%2Fled-basketball-court-lighting-1.jpg">love</a>
