--- a/_posts/2021-11-08-while.md
+++ b/_posts/2021-11-08-while.md
@@ -21,4 +21,6 @@ tags: [annotations,chintzdavenport]
 
 <p>I haven't decided how I'm going to distribute it yet, really. For now you can procure a copy by emailing me at ss3789990@gmail.com, but I hope to have a more robust site up soon. I'm actively soliciting for Issue 2, which will take as its root <a href="https://serenasol.in/2021/08/from-will-alexanders-across-the-vapour-gulf">this excerpt</a> by Will Alexander. If you have poems or visual art pieces with these words, please send me an email.</p> 
 
-<p>I call my little imprint Chintz Davenport Editions because the image of a floral sofa came to me in a dream... 
+<p>I call my little imprint Chintz Davenport Editions because the image of a floral sofa came to me in a dream...</p>
+
+<p>EDIT lol: We're calling the thing Bliis St instead... it's been a long-running Sophie's Choice between the two names. But Bliss St for now. And it lives over at <a href="http://errant-memory.net">errant-memory.net</a>.</p>
