--- a/_posts/2021-11-08-while.md
+++ b/_posts/2021-11-08-while.md
@@ -23,4 +23,4 @@ tags: [annotations,chintzdavenport]
 
 <p>I call my little imprint Chintz Davenport Editions because the image of a floral sofa came to me in a dream...</p>
 
-<p>EDIT lol: We're calling the thing Bliis St instead... it's been a long-running Sophie's Choice between the two names. But Bliss St for now. And it lives over at <a href="http://errant-memory.net">errant-memory.net</a>.</p>
+<p>EDIT lol: We're calling the thing Bliss St instead... it's been a long-running Sophie's Choice between the two names. But Bliss St for now. And it lives over at <a href="http://errant-memory.net">errant-memory.net</a>.</p>
