--- a/_posts/2021-11-08-while.md
+++ b/_posts/2021-11-08-while.md
@@ -19,7 +19,7 @@ tags: [annotations,chintzdavenport]
 
 ![while 4](/assets/signal-2021-10-27-091017_004.jpeg)
 
-<p>I haven't decided how I'm going to distribute it yet, really. For now you can procure a copy by emailing me at ss3789990@gmail.com, but I hope to have a more robust site up soon. I'm actively soliciting for Issue 2, which will take as its root <a href="https://serenasol.in/2021/08/from-will-alexanders-across-the-vapour-gulf">this excerpt</a> by Will Alexander. If you have poems or visual art pieces with these words, please send me an email.</p> 
+<p>I haven't decided how I'm going to distribute it yet, really. For now you can procure a copy by filling out <a href="https://docs.google.com/forms/d/1AXXGbqyHrfWRqqR9x-Eqqb2rRBvjW7FR2egvqJ_qowM/edit">this form</a>. We are actively soliciting for Issue 2, which will take as its root <a href="https://serenasol.in/2021/08/from-will-alexanders-across-the-vapour-gulf">this excerpt</a> by Will Alexander. If you have poems or visual art pieces with these words, please send us stuff <a href="https://docs.google.com/forms/d/e/1FAIpQLSdJlRRhtJf0JxX6aeppo0wmx5H9lNLOCiDTAyEzArEDzhZfRw/viewform">here</a>.</p> 
 
 <p>I call my little imprint Chintz Davenport Editions because the image of a floral sofa came to me in a dream...</p>
 
