--- a/_posts/2021-12-06-bliss-st.md
+++ b/_posts/2021-12-06-bliss-st.md
@@ -1,10 +1,10 @@
 ---
 layout: post
 title: "Bliss St"
-date: '2021-11-08'
+date: '2021-12-06'
 tags: []
 ---
 
 ![bliss](/assets/bliss.jpg)
 
-<p><a href = "errant-memory.net">Here</a> is where I am putting a few upcoming projects. 2022 calendar and other fun things on the way...</p>
+<p><a href = "https://errant-memory.net">Here</a> is where I am putting a few upcoming projects. 2022 calendar and other fun things on the way...</p>
