quotation mark problem

--- a/_posts/2021-12-06-seferis.md
+++ b/_posts/2021-12-06-seferis.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "from "Mythistorema"" by George Seferis (trans. Edmund Keeley and Philip Sherrard)
+title: from "Mythistorema" by George Seferis (trans. Edmund Keeley and Philip Sherrard)
 date: '2021-12-07'
 tags: []
 ---
