lowered is spelled how exactly

--- a/_posts/2021-12-06-seferis.md
+++ b/_posts/2021-12-06-seferis.md
@@ -2,7 +2,7 @@
 layout: post
 title: from "Mythistorema" by George Seferis (trans. Edmund Keeley and Philip Sherrard)
 date: '2021-12-07'
-tags: []
+tags: [poems]
 ---
 
 ![bliss](/assets/seferis.png)
@@ -22,10 +22,10 @@ tags: []
 		accept the night and the sun <br>
 		without changing in the midst of change. <br>
 		They were good men, whole days <br>
-		they sweated at the oars with loewred eyes<br>
+		they sweated at the oars with lowered eyes<br>
 		breathing in rhythm<br>
 		and their blood reddened a submissive skin.<br>
-		Sometimes they sang, with loewred eyes<br>
+		Sometimes they sang, with lowered eyes<br>
 		as we were passing the dry island with the Barbary figs<br>
 		to the west, beyond the cape<br>
 		of the barking dogs.<br>
@@ -48,7 +48,7 @@ tags: []
 		with the rudder's wake<br>
 		with the water that shattered their image.<br>
 		The companions died in turn, <br>
-		with loewred eyes. Their oars<br>
+		with lowered eyes. Their oars<br>
 		mark the place where they sleep on the shore.<br>
 <br>
 		No one remembers them. Justice.</p>
