--- a/_posts/2021-12-06-bliss-st.md
+++ b/_posts/2021-12-06-bliss-st.md
@@ -7,6 +7,8 @@ tags: []
 
 ![bliss](/assets/bliss.jpg)
 
+<caption>Pylons crushed with the weight of four days of accumulated freezing rain in Boucherville near Montreal, Canada, during the North American Ice Storm of 1998.</caption>
+
 <p><a href = "https://errant-memory.net">Here</a> is where I am putting a few upcoming projects. 2022 calendar and other fun things on the way...</p>
 
-<p><em>image credit <a href = "https://twitter.com/UrbanFoxxxx/status/1468202469096411136">Robert Laberge and @UrbanFoxxxx</a></em></p> - Pylons crushed with the weight of four days of accumulated freezing rain in Boucherville near Montreal, Canada, during the North American Ice Storm of 1998.
+<p><em>image credit <a href = "https://twitter.com/UrbanFoxxxx/status/1468202469096411136">Robert Laberge and @UrbanFoxxxx</a></em></p>
