--- a/_posts/2021-12-06-bliss-st.md
+++ b/_posts/2021-12-06-bliss-st.md
@@ -7,7 +7,7 @@ tags: []
 
 ![bliss](/assets/bliss.jpg)
 
-<caption>Pylons crushed with the weight of four days of accumulated freezing rain in Boucherville near Montreal, Canada, during the North American Ice Storm of 1998.</caption>
+<p><em>Pylons crushed with the weight of four days of accumulated freezing rain in Boucherville near Montreal, Canada, during the North American Ice Storm of 1998.</em>
 
 <p><a href = "https://errant-memory.net">Here</a> is where I am putting a few upcoming projects. 2022 calendar and other fun things on the way...</p>
 
