--- a/_posts/2021-12-06-bliss-st.md
+++ b/_posts/2021-12-06-bliss-st.md
@@ -11,4 +11,4 @@ tags: []
 
 <p><a href = "https://errant-memory.net">Here</a> is where I am putting a few upcoming projects. 2022 calendar and other fun things on the way...</p>
 
-<p><em>image credit <a href = "https://twitter.com/UrbanFoxxxx/status/1468202469096411136">Robert Laberge and @UrbanFoxxxx</a></em></p>
+<p><em>image credit <a href = "https://twitter.com/UrbanFoxxxx/status/1468202469096411136">Robert Laberge</a> via <a href= "https://twitter.com/UrbanFoxxxx">@UrbanFoxxxx</a></em></p>
