do pdfs work? let's find out

--- a/_posts/2021-12-25-rilke.md
+++ b/_posts/2021-12-25-rilke.md
@@ -5,6 +5,6 @@ date: '2021-12-25'
 tags: [reading]
 ---
 
-![rilke](/assets/rilke.pdf)
+{% pdf "/assets/rilke.pdf" %}
 
 <blockquote>Therefore, my dear sir, I know no advice for you save this: to go into yourself and test the deeps in which your life takes rise; at its source you will find the answer to the question whether you <em>must</em> create.</blockquote>
