--- a/_posts/2021-12-25-rilke.md
+++ b/_posts/2021-12-25-rilke.md
@@ -5,6 +5,8 @@ date: '2021-12-25'
 tags: [reading]
 ---
 
-<object data="{{ site.url }}{{ site.baseurl }}/_assets/rilke.pdf" width="1000" height="1000" type="application/pdf"></object>
+![rilke](/assets/rilke.jpg)
 
 <blockquote>Therefore, my dear sir, I know no advice for you save this: to go into yourself and test the deeps in which your life takes rise; at its source you will find the answer to the question whether you <em>must</em> create.</blockquote>
+
+<a href="/assets/rilke.pdf">PDF here</a>
