more of my poem

--- a/_posts/2022-3-28-update.md
+++ b/_posts/2022-3-28-update.md
@@ -8,7 +8,7 @@ tags: [personal, mypoems]
 ![howe](/assets/howe.png)
 <em>Emily Dickinson, from Susan Howe</em>
 
-A bit of a difficult spring here in Maspeth... but reading a lot. I like interacting with people on <a href="https://www.goodreads.com/user/show/46654096-serena">Goodreads</a> so if you're on there, add me.
+A bit of a difficult spring here in Maspeth... but reading a lot. I'm trying to figure out what "creative scholarship" means, so a lot of Susan Howe. I like interacting with people on <a href="https://www.goodreads.com/user/show/46654096-serena">Goodreads</a> so if you're on there, add me.
 
 Besides that, <em>Beautiful Open Prairie</em> and <em>Annotations #2</em> are slowly making their way to print. Sorry if I owe you an email with regards to either of these.
 
@@ -18,17 +18,12 @@ Here's a poem I'm still working on, probably the one I'll include in this issue 
 <br>
 A correction note to a mysterious entity:<br>
 it is not just the days, but the presences <br>
-which are growing longer. To absorb and<br>
-transmit a single wavelength, focusing<br>
-fatal energy inward, down three stories<br>
-to the tenants, is my sole career, my life’s<br>
-only occupation. Solitary on the roof,<br>
-the brick chimney dissembling, I speak<br>
-a language understood by dogs, cats,<br>
-birds, and the irrational. As the sun<br>
-stays later and later, I come to fear<br>
-all animated things, the imminent,<br>
-the inevitable, terribly: the unbridled<br>
+which are growing longer. Solitary <br>
+on the roof, the brick chimney dissembling, <br>
+I speak a language understood by cats,<br>
+birds, and the irrational. I begin to fear<br>
+all animated things—the imminent,<br>
+the inevitable—terribly: the unbridled<br>
 loosed upon the world, the escape<br>
 of the spirits I’ve gathered into me.<br>
 For there is a fault in my manufacturing.<br>
@@ -36,8 +31,8 @@ There is a bulb which does not flicker<br>
 because it was born dead, neither green<br>
 nor intervallic. No human can know<br>
 if I am powered on without listening.<br>
-I become circuitry's intolerable answer<br>
-along the blind path, where eventually<br>
+To circuitry I become the intolerable<br>
+answer, the blind path, where eventually<br>
 man, mineral, and electricity are one,<br>
 the loop closed by my master’s fleshy<br>
 hand, the hideous moment of joining—
