--- a/_posts/2022-12-3-stratis.md
+++ b/_posts/2022-12-3-stratis.md
@@ -5,7 +5,7 @@ date: '2022-12-3'
 tags: []
 ---
 
-![deer](/assets/liblim1.jpg)
+![deer](/assets/canada.jpg)
 
 <em>This one is long and is going to take me a while to type out</em>
 
@@ -13,16 +13,16 @@ tags: []
 <h2>by George Seferis</h2>
 
 1.
-But what's the matter with this man?
-All through the afternoon (yesterday, the day before yesterday and today) he has been sitting with his eyes fixed upon a flame. 
-In the evening he bumped into me on his way downstairs.
-He said: 
-"The body dies, water turns cloudy, the soul
-Hesitates
-And the wind forgets, the wind is always forgetting,
-But the flame does not change."
-He also said to me:
-"You know I love a woman who has gone away, possibly to the world below. But that is not why I look so deserted.
-I am trying to hold myself in from a flame,
-Because it does not change."
+But what's the matter with this man?<br>
+All through the afternoon (yesterday, the day before yesterday and today) he has been sitting with his eyes fixed upon a flame. <br>
+In the evening he bumped into me on his way downstairs.<br>
+He said: <br>
+"The body dies, water turns cloudy, the soul<br>
+Hesitates<br>
+And the wind forgets, the wind is always forgetting,<br>
+But the flame does not change."<br>
+He also said to me:<br>
+"You know I love a woman who has gone away, possibly to the world below. But that is not why I look so deserted.<br>
+I am trying to hold myself in from a flame,<br>
+Because it does not change."<br>
 Then he told me the story of his life.
