--- a/_posts/2022-12-3-stratis.md
+++ b/_posts/2022-12-3-stratis.md
@@ -5,7 +5,7 @@ date: '2022-12-3'
 tags: []
 ---
 
-![deer](/assets/canada.jpg)
+![deer](/assets/head.png)
 
 <em>This one is long and is going to take me a while to type out</em>
 
