--- a/_posts/2022-12-1-update.md
+++ b/_posts/2022-12-1-update.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "Poem from "The Stay Behind""
+title: "Poem from The Stay Behind"
 date: '2022-12-1'
 tags: [mypoems]
 ---
