--- a/_posts/2023-10-31-rhino.md
+++ b/_posts/2023-10-31-rhino.md
@@ -5,6 +5,6 @@ date: '2023-10-31'
 tags: []
 ---
 
-![rhino](/assets/rhino.png)
+![rhino](/assets/rhino.jpg)
 
-Just wanted to thank <em>RHINO</em> for this lovely <a href="https://rhinopoetry.org/reviews/serena-solin-reviewed-by-skye-tarshis">review</a> of <em>Solar Inveter</em>.
+Just wanted to thank <em>RHINO</em> for this lovely <a href="https://rhinopoetry.org/reviews/serena-solin-reviewed-by-skye-tarshis">review</a> of <em>Solar Inverter</em>.
