--- a/_posts/2026-02-27-sam.md
+++ b/_posts/2026-02-27-sam.md
@@ -5,7 +5,7 @@ date: '2026-02-27T00:17:41-04:00'
 
 ---
 
-Welcoming Sam Solin, born February 2026. 
+Welcoming Sam Ismail Solin, born February 2026. 
 
 ![Sam](/assets/sam.jpg)
 
